feat: add token infrastructure, IGDB data seeding, and listing scaffolding
  Token Management
  - Add UserToken entity with SHA-256 hashed storage for REFRESH and
    PASSWORD_RESET token types
  - Add TokenService with full token lifecycle: create, find, verify
    expiration, rotate, mark-used, and delete
  - Add UserTokenRepository with queries by token+type and user+type
  - Add TokenType enum (REFRESH, PASSWORD_RESET)

  IGDB Data Seeding (Genres & Platforms)
  - Add GenreEntity and PlatformEntity as first-class JPA tables
    (previously genres were stored as raw Long IDs in JSONB)
  - Add GenreService and PlatformService to fetch from IGDB and persist
    to DB, deduplicating by ID before insert
  - Add generic IngestionServiceImpl for async, deduplicating batch
    upserts — reusable across any DTO/entity pair
  - Add GameDataController exposing GET /api/v1/data/genres and
    GET /api/v1/data/platforms
  - Add GameApi.getGenres() and generic searchFromIGDB() helper
  - Add GenreMapper and GenreRepository (findAllByIdIn, findAllByNameIn)

  Game Filtering
  - Add GameFilterRequest DTO and GameProcessedFilters internal model
  - Extend GameRepository with JpaSpecificationExecutor<GameEntity>
  - Add POST /api/v1/games/filter endpoint delegating to GameService
  - Add GameSpecification for composable JPA Criteria queries

  Listing Scaffolding (WIP)
  - Add UserGame entity (user_id, game_id, condition) linking users to
    owned physical games; wire @OneToMany on User
  - Add ItemListingController and ItemListingAdminController stubs
  - Add listing DTOs: CreateListingRequest, UpdateListingRequest,
    ItemListingResponse, SetFeaturedPriorityRequest, ListingFilterRequest
  - Add ListingState and OfferType enums; add Platform constants enum

  Architecture / Cleanup
  - Migrate GameMapper from MapStruct interface to BeanUtils-based
    @Component to resolve circular dependency with ModelMapper config
  - Change GameEntity.genres from List<Long> to List<GenreEnt